--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.2.2",
+    "dotenv-webpack": "^2.0.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@types/node": "^14.10.0",
     "classnames": "^2.2.6",
     "editorconfig": "^0.15.3",
     "formik": "^2.1.5",
@@ -41,6 +43,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.29.3"
   }
 }
