--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@material-ui/core": "^4.11.0",
     "@types/node": "^14.10.0",
     "axios": "^0.20.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
@@ -53,8 +54,14 @@
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
     "formik": "^2.1.5",
+    "joi": "^17.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
