--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "signale": "^1.4.0",
     "yup": "^0.29.3"
   }
 }
