--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.5",
+    "nodemailer": "^6.4.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
