--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mongoose": "^5.10.5",
     "nodemailer": "^6.4.13",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
