--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
     "formik": "^2.1.5",
+    "http-proxy-middleware": "^1.0.6",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
