--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
     "formik": "^2.1.5",
-    "http-proxy-middleware": "^1.0.6",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
@@ -62,6 +61,7 @@
     "mongoose": "^5.10.5",
     "nodemailer": "^6.4.13",
     "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
