--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "private": "true",
   "main": "server.js",
   "scripts": {
-    "front": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open & nodemon ./server/server.js",
     "back": "nodemon ./server/server.js",
     "build": "webpack --mode production",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "ssr": "node index.js"
   },
   "nodemonConfig": {
     "ignore": [
@@ -43,6 +44,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@babel/register": "^7.12.1",
     "@material-ui/core": "^4.11.0",
     "@types/node": "^14.10.0",
     "axios": "^0.20.0",
@@ -54,6 +56,7 @@
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
     "formik": "^2.1.5",
+    "ignore-styles": "^5.0.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
@@ -74,6 +77,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "signale": "^1.4.0",
+    "webpack-node-externals": "^2.5.2",
     "yup": "^0.29.3"
   }
 }
