--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "webpack-dev-server --open & nodemon ./server/server.js",
     "back": "nodemon ./server/server.js",
     "build": "webpack --mode production",
-    "lint": "eslint .",
-    "ssr": "node index.js"
+    "lint": "eslint ."
   },
   "nodemonConfig": {
     "ignore": [
@@ -77,7 +76,6 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "signale": "^1.4.0",
-    "webpack-node-externals": "^2.5.2",
     "yup": "^0.29.3"
   }
 }
