--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --mode production --hot",
     "back": "nodemon ./server/server.js",
     "build": "webpack --mode production && nodemon ./server/server.js",
-    "front": "webpack-dev-server --config ./webpack.config.js --mode development && nodemon ./server/server.js",
+    "dev": "nodemon --watch config --watch server server/main.js",
     "lint": "eslint ."
   },
   "author": "",
@@ -33,10 +33,8 @@
     "mini-css-extract-plugin": "^0.11.0",
     "nodemon": "^2.0.4",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
@@ -74,6 +72,9 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "signale": "^1.4.0",
+    "webpack": "^5.3.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0",
     "yup": "^0.29.3"
   }
 }
