--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --mode production --hot",
     "back": "nodemon ./server/server.js",
     "build": "webpack --mode production && nodemon ./server/server.js",
-    "dev": "nodemon --watch config --watch server server/main.js",
+    "dev": "nodemon --watch config --watch server server/server.js",
     "lint": "eslint ."
   },
   "author": "",
@@ -37,8 +37,10 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/polyfill": "^7.11.5",
     "@babel/register": "^7.12.1",
+    "@babel/runtime": "^7.12.1",
     "@material-ui/core": "^4.11.0",
     "@types/node": "^14.10.0",
     "axios": "^0.20.0",
