--- a/package.json
+++ b/package.json
@@ -7,75 +7,71 @@
   "scripts": {
     "start": "webpack-dev-server --mode production --hot",
     "back": "nodemon ./server/server.js",
-    "build": "webpack --mode production && nodemon ./server/server.js",
+    "build": "webpack --mode production",
     "dev": "nodemon --watch config --watch server server/server.js",
     "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.2",
-    "dotenv-webpack": "^2.0.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
-    "file-loader": "^6.1.0",
-    "html-loader": "^1.3.0",
-    "mini-css-extract-plugin": "^0.11.0",
-    "nodemon": "^2.0.4",
-    "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/polyfill": "^7.11.5",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "@material-ui/core": "^4.11.0",
-    "@types/node": "^14.10.0",
     "axios": "^0.20.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
+    "css-loader": "^5.0.0",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^5.0.0",
     "editorconfig": "^0.15.3",
     "express": "^4.17.1",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.1.1",
     "formik": "^2.1.5",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
-    "ignore-styles": "^5.0.1",
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.0.0-beta.2",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.5",
     "nodemailer": "^6.4.13",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.13.0",
-    "react-redux": "^7.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
     "signale": "^1.4.0",
-    "webpack": "^5.3.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "yup": "^0.29.3"
   }
