--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "back": "nodemon ./server/server.js",
     "build": "webpack --mode production",
     "dev": "nodemon --watch config --watch server server/server.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
