--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "lint": "eslint .",
     "test": "jest"
   },
+  "jest": {
+    "collectCoverage": true
+  },
+
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -24,6 +28,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.4"
   },
+  
   "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
