--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "jest": {
     "collectCoverage": true
   },
-
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -26,9 +25,9 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "supertest": "^6.0.1"
   },
-  
   "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
