--- a/package.json
+++ b/package.json
@@ -13,15 +13,13 @@
     "test": "jest --env node --watch",
     "coverage": "jest --coverage"
   },
-  
   "jest": {
     "testEnvironment": "node",
     "collectCoverage": true,
-  "coveragePathIgnorePatterns": [
-    "node_modules" 
-  ]
+    "coveragePathIgnorePatterns": [
+      "node_modules"
+    ]
   },
-  
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -74,6 +72,8 @@
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
