--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.1",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "axios": "^0.20.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
